# camera-cpp-opencv

./: README.md  amd64.Dockerfile  arm32v7.Dockerfile  arm64v8.Dockerfile  catalog-info.yaml  cloudbuild.yaml  mkdocs.yaml
.github/: settings.yml
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
docs/: index.md
